<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="65dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/profile_img_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="25dp"
            android:text="@string/unblast"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="35dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:src="@drawable/baseline_more_horiz_24"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hours_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/hours_left"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/profile_name"
            app:layout_constraintTop_toBottomOf="@id/profile_name" />


        <ImageView
            android:id="@+id/public_icon"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:src="@drawable/baseline_public_24"
            app:layout_constraintStart_toEndOf="@id/hours_left"
            app:layout_constraintTop_toBottomOf="@id/profile_name"
            app:layout_constraintBottom_toBottomOf="@id/hours_left"/>

        <TextView
            android:id="@+id/post_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="12dp"
            android:text="@string/post_txt"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <TextView
            android:id="@+id/post_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:paddingHorizontal="12dp"
            android:text="@string/post_link"
            android:textColor="@color/link_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_txt" />

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.55"
            android:layout_marginTop="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/fcblogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_link" />

        <ImageView
            android:id="@+id/like_counter_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/circle_shape"
            android:padding="4dp"
            android:src="@drawable/baseline_thumb_up_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_image" />

        <TextView
            android:id="@+id/like_counter_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:text="@string/like_counter_txt"
            android:textAlignment="center"
            android:textColor="@color/counter_txt_color"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/like_counter_icon"
            app:layout_constraintTop_toBottomOf="@id/post_image" />

        <TextView
            android:id="@+id/share_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:text= "@string/share_count"
            android:textColor="@color/counter_txt_color"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/like_counter_txt"
            app:layout_constraintEnd_toStartOf="@id/user_img"
            app:layout_constraintTop_toBottomOf="@id/post_image" />

        <ImageView
            android:id="@+id/dropdown_shIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/baseline_arrow_drop_down_24"
            app:layout_constraintBottom_toBottomOf="@id/like_counter_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_image" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/profile_img_foreground"
            app:layout_constraintBottom_toBottomOf="@id/like_counter_icon"
            app:layout_constraintEnd_toStartOf="@id/dropdown_shIcon"
            app:layout_constraintTop_toBottomOf="@id/post_image" />


        <LinearLayout
            android:id="@+id/actions_buttons"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="7dp"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/like_counter_icon">

            <Button
                android:id="@+id/like_btn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/like_btn_txt"
                android:textColor="@color/counter_txt_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:icon="@drawable/outline_thumb_up_24"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/comment_btn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/comment_btn_txt"
                android:textColor="@color/counter_txt_color"
                android:textSize="12sp"
                android:textStyle="bold"
                app:icon="@drawable/outline_mode_comment_24"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/share_btn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/share_btn_txt"
                android:textColor="@color/counter_txt_color"
                android:textStyle="bold"
                app:icon="@drawable/outline_share_24"
                app:iconGravity="textStart" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>